<resources>
    <string name="app_name">Show Box</string>
    <string name="app_name_caps">SHOW BOX</string>

    <string name="title_activity_movie_detail">MovieDetail</string>
    <string name="connection_error">There was a problem fetching data. Please try again later.</string>

    <string name="synopsis_heading">Storyline</string>
    <string name="user_reviews">User reviews</string>
    <string name="title">title</string>

    <string name="title_activity_review">User Reviews</string>
    <string name="widget_title">Favourites</string>
    <string name="empty_view_text">Empty</string>
    <string name="topRated">Top rated</string>
    <string name="popular">Popular</string>
    <string name="favourite">Favourites</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="transition_name">poster</string>
    <string name="transition_name_action_bar">actionbar</string>
    <string name="play_movie_trailer">Play movie trailer</string>
    <string name="movie_icon">Movie icon</string>
    <string name="movie_video">Movie trailer</string>
    <string name="key_movie">KEY_MOVIE</string>
    <string name="trailer_error">Trailer for this movie is not available</string>
    <string name="removed">Removed</string>
    <string name="from_favourite">from Favorites!</string>
    <string name="to_favourite">To Favorites!</string>
    <string name="added">Added</string>
    <string name="key_movie_id">KEY_MOVIE_ID</string>
    <string name="youtube">YouTube</string>
    <string name="key_title">KEY_TITLE</string>
    <string name="key_data">KEY_DATA</string>
    <string name="state_reviews">STATE_REVIEWS</string>
    <string name="tag">TAG</string>


    <string name="Menu.Movies">MOVIES</string>
    <string name="Menu.TvShows">TV SHOWS</string>
    <string name="Menu.People">PEOPLE</string>
    <string name="Menu.Discover">DISCOVER</string>
    <string name="Menu.Title">MENU</string>

    <string name="Collection.TopRated">TOP RATED</string>
    <string name="Collection.Popular">POPULAR</string>
    <string name="Collection.ViewAll">VIEW ALL</string>
    <string name="Collection.Latest">LATEST</string>
    <string name="Collection.NowPlaying">NOW PLAYING</string>
    <string name="Collection.Upcoming">UPCOMING</string>
    <string name="inTheaters">In theaters</string>
    <string name="trailer">Trailers</string>
    <string name="key_movie_type">KEY_MOVIE_TYPE</string>
    <string name="Menu.Favourites">FAVOURITES</string>
    <string name="Trailer.NotAvailable">No trailers available</string>
    <string name="Review.NotAvailable">No reviews available</string>

</resources>
