<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:foreground="?selectableItemBackground">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp">

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:transitionName="@string/transition_name"
                android:scaleType="centerCrop"
                android:contentDescription="@string/movie_icon"/>

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_below="@id/movie_thumbnail"
                android:background="@color/lighterGrey"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/empty_view_text"
                android:textSize="15sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
