<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.popular_movies.ui.activity.MovieDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"
                android:theme="@style/AppTheme.AppBarOverlay">


                <com.github.florent37.diagonallayout.DiagonalLayout
                    android:id="@+id/diagonalLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/white"
                    app:layout_collapseMode="parallax"
                    diagonal:diagonal_angle="10"
                    diagonal:diagonal_direction="left"
                    diagonal:diagonal_position="bottom">

                    <ImageView
                        android:id="@+id/toolbarImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/movie_icon"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax" />

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_scrollFlags="scroll|enterAlways"
                        app:popupTheme="@style/AppTheme.PopupOverlay" />

                </com.github.florent37.diagonallayout.DiagonalLayout>


<!--

                <com.github.florent37.diagonallayout.DiagonalLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    app:layout_collapseMode="parallax"
                    diagonal:diagonal_angle="10"
                    diagonal:diagonal_direction="left"
                    diagonal:diagonal_position="bottom" >

                    <com.github.florent37.diagonallayout.DiagonalLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        app:layout_collapseMode="parallax"
                        diagonal:diagonal_angle="20"
                        diagonal:diagonal_direction="left"
                        diagonal:diagonal_position="top" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/black_transparency_60"
                            />
                    </com.github.florent37.diagonallayout.DiagonalLayout>


                <com.github.florent37.diagonallayout.DiagonalLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    app:layout_collapseMode="parallax"
                    diagonal:diagonal_angle="10"
                    diagonal:diagonal_direction="left"
                    diagonal:diagonal_position="top" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:background="@color/black_transparency_60"
                        />
                    </com.github.florent37.diagonallayout.DiagonalLayout>
-->

<!--
                </com.github.florent37.diagonallayout.DiagonalLayout>
-->

            </RelativeLayout>

            <!--
                    INFO SQUARES BEGIN
             -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_bar"
                android:layout_gravity="center"
                android:layout_marginTop="-80dp"
                android:gravity="center">

                <android.support.v7.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:elevation="14dp"
                    app:cardBackgroundColor="@color/pureBlack"
                    app:cardElevation="14dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/ivFavorite"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_favorite_border" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:layout_marginLeft="64dp"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="20dp"
                    android:elevation="8dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardElevation="8dp">

                    <TextView
                        android:id="@+id/userRatings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="3dp"
                        android:text="@string/empty_view_text"
                        android:textColor="@color/pureBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

            </RelativeLayout>

            <!--
                    INFO SQUARES END
             -->

            <!--
                    BOTTOM LAYOUT BEGIN
             -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_bar"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="12dp"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginRight="@dimen/text_margin"
                        android:layout_marginTop="@dimen/margin_24"
                        android:text="@string/title"
                        android:textColor="@color/pureBlack"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/synopsis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginRight="@dimen/text_margin"
                        android:text="@string/empty_view_text"
                        android:textColor="@color/grey" />

                </RelativeLayout>

                <View
                    android:layout_width="50dp"
                    android:layout_height="0.5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/text_margin"
                    android:background="@color/pureBlack"/>

                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:text="@string/inTheaters"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom" />

                <Button
                    android:id="@+id/buttonUserReviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/user_reviews"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </LinearLayout>

            <!--
                    BOTTOM LAYOUT END
             -->
            <!--
                <include layout="@layout/content_detailed_view"/>
            -->


        </RelativeLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
